# texfury

./: .gitignore  .gitmodules  README.md  pyproject.toml
native/: ..texfurytexfury_native.exp  ..texfurytexfury_native.lib  build.bat  texfury_native.cpp
test_output/: alpha_a8r8g8b8.dds  alpha_bc3.dds  alpha_bc7.dds  checker_bc1.dds  checker_bc7.dds  colorwheel_a8r8g8b8.dds  colorwheel_bc3.dds  colorwheel_bc7.dds  gradient_a8r8g8b8.dds  gradient_bc1.dds  gradient_bc3.dds  gradient_bc7.dds  textures_a8r8g8b8.ytd  textures_bc7.ytd  textures_mixed.ytd
tests/: conftest.py  test_formats.py  test_imports.py  test_itd.py  test_rsc.py  test_texture.py  test_utilities.py  test_vanilla_wtd.py  test_vanilla_ytd.py
texfury/: __init__.py  _native.py  binary.py  formats.py  resource.py  rsc8.py  texture.py  texture_dict.py  utils.py  ytd.py
texfury/rsc/: __init__.py  rsc5.py  rsc7.py  rsc8.py
