[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "texfury"
version = "1.4.2"
description = "Fast image-to-DDS conversion and YTD texture dictionary toolkit"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Hancapo"}]
keywords = ["dds", "texture", "bc7", "compression", "ytd", "mipmap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = []

[project.optional-dependencies]
pil = ["Pillow"]

[project.urls]
Repository = "https://github.com/Hancapo/texfury"

[tool.setuptools.packages.find]
include = ["texfury*"]

[tool.setuptools.package-data]
texfury = ["*.dll"]
